# test_app

./: LICENSE  Procfile  app.py  data.json  main.py  pyproject.toml  requirements.txt  server.py
acquire/: grabques.py
operations/: generator.py  question.py
tests/: test_for_max.py
