[tool.poetry]
name = "for_max"
version = "0.1.0"
description = ""
authors = ["rbownes <richard.bownes@bbc.co.uk>"]

[tool.poetry.dependencies]
python = "3.8.5"
reportlab = "^3.5.59"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
streamlit = "^0.76.0"
scikit-learn = "^0.24.1"
black = "^20.8b1"
radon = "^4.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
